--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="bg">Book a Service Today!</button>
         </div>
         <div class="right">
-            <img src="images/laundaryimage.jpg">
+            <img src="laundaryimage.jpg">
         </div>
     </hero>
 </body>
